[package]
name = "gke-pullup"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/imp/gke-pullup-rs"
description = "A tool to upgrade GKE clusters to the latest compatible Kubernetes version."
license = "Apache-2.0"
readme = "README.md"


[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
google-cloud-gax = "1.9"
google-cloud-container-v1 = "1.9"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.52", features = ["full"] }
